Kubernetes_Workloads/05_hello-world-java-spring-boot/k8s-artifacts/04_customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  namespace: demo
  labels:
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
      - name: demo
        image: akashdocker29/demo:v1.0.0
        ports:
        - containerPort: 8080
