Kubernetes_Workloads/05_hello-world-java-spring-boot/k8s-artifacts/02_customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: demo
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: demo
  type: ClusterIP
